Добавил отображение пользовтаелю только его записей, админ может смотреть все